fixed alignment issues at the intro section

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -65,6 +65,7 @@
             width: 100%;
             height: 100%;
             padding-left: 50px;
+           
             
 
               
@@ -73,15 +74,15 @@
                 margin: 10px 0;
                 font-weight: 400;
                 @include mobile{
-                    font-size: 40px;   
+                    font-size: 30px;   
                     font-weight: 400;  
-                    margin: 2px 86px;
+                    margin: 1px;
                 }
 
                 @include iphone8{
-                    font-size: 40px;   
+                    font-size: 30px;   
                     font-weight: 400;  
-                    margin: 2px 86px;
+                    margin: 1px ;
                 }
             }
 
@@ -96,7 +97,7 @@
                 }
 
                 @include iphone8{
-                    font-size: 27px;   
+                    font-size: 20px;   
                     font-weight: 300;  
                     
                 }
@@ -109,6 +110,18 @@
                 span{
                     font-size: inherit;
                     color: crimson;
+
+                    @include mobile{
+                        font-size: 20px;   
+                         
+                    }
+
+                    @include iphone8{
+                        font-size: 20px;   
+                         
+                    }
+
+                    
                 }
 
                 @include mobile{
